fix login,signup button issue on IE browser with ticket #105948074

--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -75,8 +75,9 @@ nav {
     float: right;
     padding-top: 0;
     width: auto;
-    overflow: auto;
-    max-height: initial;
+    overflow: hidden;
+    max-height: 60px;
+
     
     [dir="rtl"] & {
       float: left;
